@@ -5492,8 +5492,6 @@ C_s[\text{pF}] = 500\cdot h\cdot\exp
 
 
 
-\nocite{*}
-
 \chapter*{Bibliography}
 \addcontentsline{toc}{chapter}{Bibliography}
 \def\chapter*{}% to suppress any header
@@ -5501,5 +5499,7 @@ C_s[\text{pF}] = 500\cdot h\cdot\exp
 \renewcommand{\bibname}{}
 \bibliographystyle{IEEEtran}
 \bibliography{literature}
+
+\nocite{*}
 
 \end{document}
