@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: component.h,v 1.11 2004/07/21 16:25:09 ela Exp $
+ * $Id: component.h,v 1.12 2004/07/24 00:10:28 ela Exp $
  *
  */
 
@@ -61,6 +61,8 @@
 #include "tline.h"
 #include "iprobe.h"
 #include "spfile.h"
+#include "vnoise.h"
+#include "inoise.h"
 
 #include "devices/diode.h"
 #include "devices/jfet.h"
